# reedu

./: CHANGELOG_ALL_NAVIGATION_FIXED.md  CHANGELOG_REPO_LOADING.md  CHANGELOG_SEMANTIC_URL.md  CHANGELOG_SEMANTIC_URL_FIX.md  COURSEWARE_DISPLAY_FIX.md  DEPLOY.md  FINAL_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOGIN_OPTIONAL_UPDATE.md  MANAGEMENT_LAYOUT_UPDATE.md  README.md  README_DEPLOY.md  README_UPGRADE.md  REFACTOR_SUMMARY.md  SCHEMA_MIGRATION_GUIDE.md  SUPABASE_SETUP.md  SUPABASE_TROUBLESHOOTING.md  TAURI_QUICKSTART.md  index.html  nginx.conf.example  package-lock.json  package.json  supabase-schema.sql  vite.config.ts  一元二次.html  使用说明_课件仓库.md  可交互式动画系统说明.md  结构化课件格式说明.md  课件要求.md  题目.md
.github/workflows/: build-tauri.yml
docs/: TAURI_BUILD.md  外部课件仓库使用说明.md  路由和部署说明.md
public/: _redirects  manifest.example.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: CountdownDisplay.tsx  CountdownEndAnimation.tsx  ManagementLayout.tsx  PromptGenerator.tsx  RollCallAnimation.tsx  RollCallTool.tsx  ToolsModal.tsx  TopNav.tsx
src/config/: supabase.ts
src/context/: AuthContext.tsx  CoursewareContext.tsx
src/coursewares/: README.md  index.ts
src/hooks/: useAuth.ts
src/pages/: AuthPage.tsx  CatalogPage.tsx  ConfigPage.tsx  CoursePage.tsx  CoursewarePlayer.tsx  CoursewareSquare.tsx  DynamicCoursePage.tsx  HomePage.tsx  NavigationPage.tsx
src/services/: authService.ts  coursewareLoader.ts  coursewareSquareService.ts  (+1 more)
(+13 files in other folders)
